# cv_template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ci.yml  docker-compose.yml  pyproject.toml  test_environment.py  tox.ini
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst
