[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "A template repository for Computer Vision projects"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>" ]
license = "{{cookiecutter.license}}"
#requires-python = ">={{cookiecutter.python_version}}, <4.0"

[tool.poetry.dependencies]
python = ">={{cookiecutter.python_version}}, <4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pre-commit = "^3.2"
black = "^23.3"
flake8 = "^6.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
